--- a/blog.org
+++ b/blog.org
@@ -1,8 +1,9 @@
-#+TITLE: Home Page
+#+TITLE: joshua-wood.dev
 #+AUTHOR: Joshua Wood
 #+INCLUDE: header.org
 
 
-* [[file:development/index.org][Development]]
+* Categories
++ [[file:development/index.org][Development]]
 
-* [[file:philosophy/index.org][Philosophy]]
++ [[file:philosophy/index.org][Philosophy]]
