Update quote attributions

--- a/politics/ajw-banko.org
+++ b/politics/ajw-banko.org
@@ -41,8 +41,12 @@ Source: "Brown threatened to stab Anthony."
 Now ask yourself this, can one threaten to stab someone without actually possessing a knife? Yes. Obviously.
 
 Contrast again what you said with your own source:
+
+#+begin_quote
 AJW: "Banko decided to lunge at the security guard with a knife".
+
 Source: "According to the [aforementioned anonymous] source, that is when Brown approached Anthony, who fired his gun."
+#+end_quote
 
 Now ask yourself, can one "approach" without "lunging" with a knife? Again, Obviously yes.
 
@@ -57,7 +61,7 @@ It gets even worse than this. Here are several sources contradicting your claim,
 
 #+begin_quote
 "However, [District Attorney Brooke] Jenkins noted that the only weapon found in the incident was the gun used by Anthony."
-[[https://www.cbsnews.com/sanfrancisco/news/banko-brown-fatal-shooting-san-francisco-walgreens-security-guard-no-charges/#:~:text=However%2C%20Jenkins%20noted][- CBS News]]
+[[https://www.cbsnews.com/sanfrancisco/news/banko-brown-fatal-shooting-san-francisco-walgreens-security-guard-no-charges/#:~:text=However%2C%20Jenkins%20noted][- CBS News Bay Area]]
 #+end_quote
 
 #+begin_quote
@@ -75,8 +79,12 @@ To be fair to you, although I don't know why anyone would be fair to a psychotic
 
 This is however /*/TOO/*/ charitable as one of your other two sources came out only a day before your video as did the two sources I posted that demonstrate there was no knife to the best of our knowledge.
 
-Another thing I find bizarre about your video is you claim that you didn't know Brown's gender. I wasn't even searching for the gender, and I found several sources saying Brown was a transman... including IN THE DESCRIPTION OF ONE OF YOUR SOURCES!!! It reads: "A vigil was held Friday night to remember Banko Brown, a man killed in a shooting at a Walgreens in San Francisco"
-https://youtu.be/b1Yzx1FBqac
+Another thing I find bizarre about your video is you claim that you didn't know Brown's gender. I wasn't even searching for the gender, and I found several sources saying Brown was a transman... including IN THE DESCRIPTION OF ONE OF YOUR SOURCES!!!
+It reads:
+
+#+begin_quote
+"A vigil was held Friday night to remember Banko Brown, a man killed in a shooting at a Walgreens in San Francisco" [[https://youtu.be/b1Yzx1FBqac][- ABC7 News Bay Area]]
+#+end_quote
 
 I just can't believe you'd be confused about this. Jesus, you really are just a lazy racist moron.
 
