Update ajw banko brown file

--- a/politics/index.org
+++ b/politics/index.org
@@ -3,4 +3,4 @@
 
 * Posts
 
-+ [[file:ajw-banko.org][Actual Justice Warrior is an Insane Racist Freak]] 
++ [[file:ajw-banko/ajw-banko.org][Actual Justice Warrior is an Insane Racist Freak]]
