Clean up ajw-banko blog

--- a/politics/ajw-banko/ajw-banko.org
+++ b/politics/ajw-banko/ajw-banko.org
@@ -13,7 +13,7 @@ In response to the controversy of Banko Brown being killed after stealing from a
 
 * Actual False-Reporting Warrior
 
-The first claim I want to address that Actual Racist Freak Warrior is on where he tries to paint Brown as an attempted murderer. He says:
+The first claim I want to address that Actual Racist Freak Warrior is where he tries to paint Brown as an attempted murderer. He says:
 
 #+begin_quote
 "Banko decided to lunge at the security guard with a knife." - AJW
@@ -92,7 +92,7 @@ I find this especially funny because he later claims that he's late to report on
 #+end_export
 
 
-Note carefully when he says he "usually announces his mistakes clearly and obviously." I won't hold my breath for a retraction.
+Note carefully when he says he "usually announces his mistakes clearly and obviously." As you can see from when the video was uploaded, no effort has been made to correct his mistakes even after pointed out to him on twitter. I, of course, won't hold my breath for a retraction.
 
 
 * "Evil White Racism": A Good Explanation
@@ -142,13 +142,11 @@ I just can't believe Sean was confused about this. Jesus, he really just is a la
 The worst part of all this is if he weren't so insane, he could have been a little bit more covert with his racism and made essentially the same argument. In several of these sources the DA makes it clear that the video footage shows that Brown was violent, thus justifying the self-defense adjudication. That means he didn't have to be insane and interpolate or blatantly lie, whichever it was he did, in order to make his point. He could have gone the much more dog whistly approach instead of just DE-ciding to make shit up either because his DE-lusional racist brain read words that weren't there or was just so racist he had to lie.
 
 * Bonus
-I searched "little mermaid" on your channel home page.
+I searched "little mermaid" on his channel home page.
+
+How could I have possibly guessed that I'd find his "commentary" on it?
 
 [[file:little-mermaid.png]]
-
-
-How could I have possibly guessed that I'd find your "commentary" on it?
-
 #+begin_export html
 <div style="text-align:center;">
 🤔🤔🤔🤔🤔
