--- a/blog.org
+++ b/blog.org
@@ -7,3 +7,5 @@
 + [[file:development/index.org][Development]]
 
 + [[file:philosophy/index.org][Philosophy]]
+
++ [[file:politics/index.org][Politics]]
