Add chomsky v lenin and in defence of socialist planning

--- a/politics/index.org
+++ b/politics/index.org
@@ -4,3 +4,5 @@
 * Posts
 
 + [[file:ajw-banko/ajw-banko.org][Actual Justice Warrior is an Insane Racist Freak]]
++ [[file:in-defence-of-socialist-planning/in-defense-of-socialist-planning.org][In Defence Of Socialist Planning]]
++ [[file:chomsky-vs-lenin/chomsky-vs-lenin.org][Chomsky Vs. Lenin]]
