--- a/philosophy/index.org
+++ b/philosophy/index.org
@@ -2,6 +2,6 @@
 #+INCLUDE: ~/org/blog/philosophy/header.org
 
 * Posts
-+ [[file:external-value-properties.org][Argument For External Value Properties]]
++ [[file:external-value-properties/index.org][Argument For External Value Properties]]
 
-+ [[file:visibility-of-value.org][Visibility Of Value]]
++ [[file:visibility-of-value/index.org][Visibility Of Value]]
