Remove index references in headers

--- a/development/header.org
+++ b/development/header.org
@@ -5,9 +5,9 @@
 #+begin_export html
   <div class="topbar-menu-container">
     <span class="topbar-menu"><a href="/">Home</a></span>
-    <span class="topbar-menu"><a class="current" href="/development/index.html">Development</a></span>
-    <span class="topbar-menu"><a href="/philosophy/index.html">Philosophy</a></span>
-    <span class="topbar-menu"><a href="/politics/index.html">Politics</a></span>
+    <span class="topbar-menu"><a class="current" href="/development">Development</a></span>
+    <span class="topbar-menu"><a href="/philosophy">Philosophy</a></span>
+    <span class="topbar-menu"><a href="/politics">Politics</a></span>
   </div>
 #+end_export
 
