--- a/header.org
+++ b/header.org
@@ -4,9 +4,9 @@
 #+begin_export html
   <div class="topbar-menu-container">
     <span class="topbar-menu"><a class="current" href="/">Home</a></span>
-    <span class="topbar-menu"><a href="/development/index.html">Development</a></span>
-    <span class="topbar-menu"><a href="/philosophy/index.html">Philosophy</a></span>
-    <span class="topbar-menu"><a href="/politics/index.html">Politics</a></span>
+    <span class="topbar-menu"><a href="/development">Development</a></span>
+    <span class="topbar-menu"><a href="/philosophy">Philosophy</a></span>
+    <span class="topbar-menu"><a href="/politics">Politics</a></span>
   </div>
 #+end_export
 
