--- a/philosophy/index.org
+++ b/philosophy/index.org
@@ -2,6 +2,8 @@
 #+INCLUDE: ~/org/blog/philosophy/header.org
 
 * Posts
++ [[file:women-are-not-adult-human-females][Women Are Not Adult Human Females]]
+
 + [[file:external-value-properties][Argument For External Value Properties]]
 
 + [[file:visibility-of-value][Visibility Of Value]]
