--- a/noumena/2023/june/index.org
+++ b/noumena/2023/june/index.org
@@ -19,7 +19,7 @@
     <!-- Generate anchor tags with numbers 1-30 -->
     <a>1</a><a>2</a><a>3</a><a>4</a><a>5</a><a>6</a><a>7</a>
     <a>8</a><a>9</a><a>10</a><a>11</a><a>12</a><a>13</a><a>14</a>
-    <a href="./15">15</a><a href="./16">16</a><a>17</a><a>18</a><a>19</a><a>20</a><a>21</a>
+    <a href="./15">15</a><a href="./16">16</a><a href="./17">17</a><a href="./18">18</a><a>19</a><a>20</a><a>21</a>
     <a>22</a><a>23</a><a>24</a><a>25</a><a>26</a><a>27</a><a>28</a>
     <a>29</a><a>30</a>
   </div>
