More entries and some style updates.

--- a/philosophy/women-are-not-adult-human-females/index.org
+++ b/philosophy/women-are-not-adult-human-females/index.org
@@ -3,7 +3,7 @@
 #+INCLUDE: ~/org/blog/philosophy/header.org
 * Preface
 
-Authored by Rebecca Mason.
+Authored by Rebecca Mason and published here with her permission.
 
 University of San Francisco
 
