--- a/noumena/2023/june/index.org
+++ b/noumena/2023/june/index.org
@@ -20,8 +20,8 @@
     <a>1</a><a>2</a><a>3</a><a>4</a><a>5</a><a>6</a><a>7</a>
     <a>8</a><a>9</a><a>10</a><a>11</a><a>12</a><a>13</a><a>14</a>
     <a href="./15">15</a><a href="./16">16</a><a href="./17">17</a><a href="./18">18</a><a href="./19">19</a><a href="./20">20</a><a href="./21">21</a>
-    <a href="./22">22</a><a href="./23">23</a><a href="./24">24</a><a href="./25">25</a><a>26</a><a>27</a><a>28</a>
-    <a>29</a><a>30</a>
+    <a href="./22">22</a><a href="./23">23</a><a href="./24">24</a><a href="./25">25</a><a href="./26">26</a><a href="./27">27</a><a href="./28">28</a>
+    <a href="./29">29</a><a href="./30">30</a>
   </div>
   #+end_export
 
