--- a/noumena/2023/july/index.org
+++ b/noumena/2023/july/index.org
@@ -23,9 +23,9 @@
     <span></span>
     <!-- Generate anchor tags with numbers 1-30 -->
     <a href="./01">1</a><a href="./02">2</a><a href="./03">3</a><a href="./04">4</a><a href="./05">5</a><a href="./06">6</a><a href="./07">7</a>
-    <a href="./08">8</a><a href="./09">9</a><a href="./10">10</a><a href="./11">11</a><a href="./12">12</a><a href="./13">13</a><a>14</a>
-    <a >15</a><a >16</a><a >17</a><a >18</a><a >19</a><a >20</a><a >21</a>
-    <a >22</a><a >23</a><a >24</a><a >25</a><a >26</a><a >27</a><a >28</a>
-    <a >29</a><a >30</a><a>31</a>
+    <a href="./08">8</a><a href="./09">9</a><a href="./10">10</a><a href="./11">11</a><a href="./12">12</a><a href="./13">13</a><a href="./14">14</a>
+    <a href="./15">15</a><a href="./16">16</a><a href="./17">17</a><a href="./18">18</a><a href="./19">19</a><a href="./20">20</a><a href="./21">21</a>
+    <a href="./22">22</a><a href="./23">23</a><a >24</a><a >25</a><a >26</a><a >27</a><a >28</a>
+    <a >29</a><a >30</a><a>31</a><a 31</a>
   </div>
   #+end_export
