--- a/noumena/2023/index.org
+++ b/noumena/2023/index.org
@@ -51,7 +51,7 @@
     <a href="./july/01">1</a><a href="./july/02">2</a><a href="./july/03">3</a><a href="./july/04">4</a><a href="./july/05">5</a><a href="./july/06">6</a><a href="./july/07">7</a>
     <a href="./july/08">8</a><a href="./july/09">9</a><a href="./july/10">10</a><a href="./july/11">11</a><a href="./july/12">12</a><a href="./july/13">13</a><a href="./july/14">14</a>
     <a href ="./july/15">15</a><a href="./july/16">16</a><a href="./july/17">17</a><a href="./july/18">18</a><a href="./july/19">19</a><a href="./july/20">20</a><a href="./july/21/">21</a>
-    <a href="./july/22">22</a><a href="./july/23" >23</a><a href="./july/24">24</a><a >25</a><a >26</a><a >27</a><a >28</a>
+    <a href="./july/22">22</a><a href="./july/23" >23</a><a href="./july/24">24</a><a href="./july/25">25</a><a >26</a><a >27</a><a >28</a>
     <a >29</a><a >30</a><a>31</a>
   </div>
   #+end_export
