--- a/noumena/2023/index.org
+++ b/noumena/2023/index.org
@@ -3,6 +3,7 @@
 
 * [[file:june][June]]
   #+begin_export html
+  <div class="calendar-container">
   <div class="weekdays">
     <span>Sun</span>
     <span>Mon</span>
@@ -20,8 +21,9 @@
     <a>1</a><a>2</a><a>3</a><a>4</a><a>5</a><a>6</a><a>7</a>
     <a>8</a><a>9</a><a>10</a><a>11</a><a>12</a><a>13</a><a>14</a>
     <a href="./june/15">15</a><a href="./june/16">16</a><a href="./june/17">17</a><a href="./june/18">18</a><a href="./june/19">19</a><a href="./june/20">20</a><a href="./june/21">21</a>
-    <a href="./22">22</a><a href="./23">23</a><a href="./24">24</a><a href="./25">25</a><a href="./june/26">26</a><a href="./june/27">27</a><a href="./june/28">28</a>
-    <a href="./june/29">29</a><a href="./30">30</a>
+    <a href="./june/22">22</a><a href="./june/23">23</a><a href="./june/24">24</a><a href="./june/25">25</a><a href="./june/26">26</a><a href="./june/27">27</a><a href="./june/28">28</a>
+    <a href="./june/29">29</a><a href="./june/30">30</a>
+  </div>
   </div>
   #+end_export
 
@@ -29,6 +31,7 @@
 * [[file:july/][July]]
 
   #+begin_export html
+  <div class="calendar-container">
   <div class="weekdays">
     <span>Sun</span>
     <span>Mon</span>
@@ -52,6 +55,28 @@
     <a href="./july/08">8</a><a href="./july/09">9</a><a href="./july/10">10</a><a href="./july/11">11</a><a href="./july/12">12</a><a href="./july/13">13</a><a href="./july/14">14</a>
     <a href ="./july/15">15</a><a href="./july/16">16</a><a href="./july/17">17</a><a href="./july/18">18</a><a href="./july/19">19</a><a href="./july/20">20</a><a href="./july/21/">21</a>
     <a href="./july/22">22</a><a href="./july/23" >23</a><a href="./july/24">24</a><a href="./july/25">25</a><a href="./july/26">26</a><a href="./july/27">27</a><a href="./july/28">28</a>
-    <a href="./july/29">29</a><a >30</a><a>31</a>
+    <a href="./july/29">29</a><a href="./july/30">30</a><a href="./july/31">31</a>
   </div>
+  </div>
+  #+end_export
+
+* [[file:august/][August]]
+  #+begin_export html
+ <div class="weekdays">
+  <span>Sun</span>
+  <span>Mon</span>
+  <span>Tue</span>
+  <span>Wed</span>
+  <span>Thu</span>
+  <span>Fri</span>
+  <span>Sat</span>
+</div>
+<br>
+<div class="calendar">
+  <span></span>
+  <a href="./august/01">1</a>   <a href="./august/02/">2</a>   <a href="./august/03">3</a>   <a>4</a>
+  <a>5</a>   <a>6</a>   <a>7</a>   <a>8</a>   <a>9</a>   <a>10</a>   <a>11</a>
+  <a>12</a>   <a>13</a>   <a>14</a>   <a>15</a>   <a>16</a>   <a>17</a>   <a>18</a>
+  <a>19</a>   <a>20</a>   <a>21</a>   <a>22</a>   <a>23</a>   <a>24</a>   <a>25</a>
+  <a>26</a>   <a>27</a>   <a>28</a>   <a>29</a>   <a>30</a>   <a>31</a> </div>
   #+end_export
