Updating journal entry

--- a/noumena/2023/august/03/index.org
+++ b/noumena/2023/august/03/index.org
@@ -1,13 +1,49 @@
 #+TITLE: August  3, 2023
 #+INCLUDE: ~/org/blog/noumena/header.org
 
+[[file:action-slide.png]]
+
 * Good Morning
 
-* At Home
+It was another day not waking up until 8am and Noumena hasn't fussed at all. It must just be part of growing up. I get dressed, brush my teeth and prepare Noumena's food as usual. When I go into her room, she's already awake. No matter how many times I experience this, it still surprises me that she can remain content for so long. I wonder what time she wakes up in the morning and just lays there totally content. Since we don't start eating until about 8:15am, I have to get her dressed immediately after eating. Noumena gives me a little bit of a hard time as I start, but then calms down and lets me changer her without much of a fuss. It's already passed 8:35 so we have to get out of here. She's calm and talkative the whole car ride to day care.
+
+When arriving at daycare, all the kids that are there like me because I spend a little time with them every day when I drop off Noumena, so they're handing me stuff, and they start acting crazy, so---with Noumena in my arms---I start chasing them around the classroom. Eventually, I take a seat with Noumena on my lap and play with some blocks prompting her to stand up so I can leave. When she does stand, I follow standing immediately. She's unsure how she feels about it once she realizes that I'm leaving. She looks back at me, not quite crying, but with her lips half-cocked like she's about to. As I exit, she begins to cry, just a little bit. I'm still glad that she doesn't want Daddy to leave her there without him.
+
+* Good Evening
+
+When I pick Noumena up, she jumps up as soon as she sees me! At first she starts running at me, but then when she realizes that I'm there to get her, she starts running away! Apparently, Noumena wants to stay playing with her friends. As I walk carrying her to the car, she starts flailing and wants to get down whining a bit. Putting her in the car seat is a challenge as she begins to resist quite strongly. It's only after I get her strapped in that I'm able to calm her down by playing peek-a-boo with her blanky as she sits in the seat and surprise-kiss her periodically.
+
+Apparently, the soup is getting boring because Noumena does not seem to want to eat it at all. It's okay, I never want to make her eat anything she doesn't want to. Experiencing that as a kid was really frustrating to me, so I never want to do that to her. I give her a date, some mandarin oranges, a puree and she does eat a little bit of that soup.
+
+For some reason, I'm tired, so we just kind of lazily play in the living room for about an hour and then head to the park.
+
+#+begin_export html
+<div class="video-container">
+<iframe width="1905" height="733" src="https://www.youtube.com/embed/X0fYdgOchTE" title="Playing With Daddy In The Bedroom" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+#+end_export
+
+#+begin_export html
+<div class="video-container">
+<iframe width="1905" height="733" src="https://www.youtube.com/embed/7NqKXBimTtk" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+#+end_export
+
+#+begin_export html
+<div class="video-container">
+<iframe width="1905" height="733" src="https://www.youtube.com/embed/7NqKXBimTtk" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+#+end_export
 
 * Park
 
 [[file:huge-smile.jpg]]
+
+Driving to the park is only about 6 minutes away. Even so, Noumena falls asleep pretty quickly on our way there. They didn't log how much she napped today in the daycare app, so I don't really have a clue how long she slept, but if she falls asleep this quickly, then it's a good assumption to think she slept very little. Unfortunately, I'll have to wake her up when we arrive at about 7:05pm.
+
+Just as Noumena and I arrive at the park, there's a couple there with their two daughters---one perhaps 7-9 and the other just a baby---arriving at the same time. We follow them into the park and go immediately to the playground. I ask how old their baby is and they tell me she's 10 months. She's huge for a baby and incredibly she's already walking! I'm so impressed I can't help but comment on it.
+
+Today was a busy day at the park. When we get there, there are already 2 boys playing. Shortly after we arrive a family with a brother and sister follow. After we play for about 30 minutes, 2 separate mothers with their daughters come to the park. Noumena has lots of friends to play with today, though, admittedly, when she meets new people, her version of playing is mostly to just stare at them. I get lots of good pictures and we run around and have tons of fun.
 
 [[file:playing-with-friends-.jpg]]
 
@@ -15,10 +51,41 @@
 
 [[file:through-the-playground-holes.jpg]]
 
-* Back at Home
+#+begin_export html
+<div class="video-container">
+<iframe width="1905" height="733" src="https://www.youtube.com/embed/XYowsS-N7S0" title="Going Down Slide Chasing Daddy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+#+end_export
+
+#+begin_export html
+<div class="video-container">
+<iframe width="1905" height="759" src="https://www.youtube.com/embed/_WTsJg_E6t8" title="Playing On The Equipment" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+#+end_export
+
+I brought her sippy-cup with us so that she has access to water immediately as we leave the park as I learned is important from yesterday. She's frustrated though---I'm thinking it's because she's tired---she barely wants to drink anything. She cries for a while in the car seat and there's nothing I can do. Eventually she calms down, though and when we get home someone is there to see us...
+
+* Night Time
 
 [[file:squating-next-to-kisa.jpg]]
 
+It's a little after 8pm when we get back home. Pulling up, We see Kisa sun bathing on the driveway. I took a bunch of pictures, but only on was really good. I prompt Noumena to walk into the house, and after a little hesitation, she follows me in to be greeted by Chalmers.
+
+I don't know what triggered it initially, but at some point she starts throwing a fit. I have no account for this. I think she might be thirsty, so I have hand her some soymilk. She drinks a little but then goes back to screaming and being upset. I gave her a date to see if the sweetness would help, and it does, but very little. She's not interested in books or toys or anything. I'm thinking to myself it's got to be because she's tired. Chalmers has to go to the bathroom, so I hold her and we go outside and watch him. That helps with Noumena for a little while, but she's still upset. We spend the time until 8:30pm on the bed with Chalmers just trying to make her feel better. She has fun playing with him, but you can still tell there's something wrong. I gave her some children's ibuprofen thinking it's possible that she's having and adverse reaction to the vaccines she just got. After all, she's also had a runny nose since she woke up.
+
 * Bath Time
 
-* Bed Time
+At 8:30pm, we go to follow our usual bath time routine. When  I take off Noumena's diaper, she had pooped, but it was all liquid and her private parts were practically glowing bright red! I didn't even smell it and I had been carrying her since the park. I felt so sorry for her. It's really surprising to because before we left for the park, I had applied the extra strength Desitin cream which is specifically for treating diaper rash. I use it every day as a preventative measure and it's not been an issue at all so far. Maybe the wet diaper happened very early at the park and I just didn't notice and she did a lot of sliding and running around exacerbating the issue. Today was the first day Noumena had what appeared to be a real diaper rash. Needless to say, I do very little to clean her with the wipes as I don't want to aggravate the rash and I hold her by the torso with my arms outstretched to take her to the bath.
+
+I'm a little worried she'll act up during bath time but she's her usual pleasant self the whole time. I shampoo her hair and rinse her off, but when I go to wash her body there's a problem. I always clean her private areas very thoroughly and when I get her into a standing position to do so, she starts crying immediately. This rash is definitely hurting her. I feel so bad for my poor baby and try to make everything quick.
+
+This leads us to getting out of the bath a little earlier than usual, so I spend that extra time after brushing her teeth and feeding the pets getting her to help me clean the living room.
+
+* Good Night
+
+I take Noumena into her room and hold her tight as we sing and dance to /Isn't She Lovely/. I just want to hold her tight to make her feel good because of her rash. She lays content against my chest, but I want to disturb her as little as possible when I go to lay her in her crib, so I cradle her in my arms halfway through the song. By the end of the song, she's completely out. She was definitely tired today. I cradle her while listening to /Stand By Me/ and then lay her in her crib for a good night's sleep. She doesn't fuss at all when I lay her down. She's out cold.
+
+
+Good night, my precious Noumena. I hope that Desitin and ibuprofen keep you resting easy.
+
+I'll see you in the morning, love of my life!
